# fastapi-wb

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: config.py  dependencies.py
app/api/v1/: auth.py  users.py
app/auth/: domain.py
app/db/: base.py  session.py
app/users/: crud.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: fc2326310aec_migrations.py
tests/: conftest.py
tests/api/v1/: test_auth.py  test_users.py
tests/auth/: test_domain.py
